# example-lib

./: README.md  pyproject.toml
mypackage/: mymodule.py
unit_tests/: test_mymodule.py
